--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ng-multiselect-dropdown": "^0.3.8",
     "ngx-material-timepicker": "^13.1.1",
     "number-to-words": "^1.2.4",
+    "pdfmake": "^0.2.10",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "xlsx": "^0.18.5",
@@ -41,6 +42,7 @@
     "@types/feather-icons": "^4.29.1",
     "@types/jasmine": "~4.0.0",
     "@types/number-to-words": "^1.2.3",
+    "@types/pdfmake": "^0.2.9",
     "jasmine-core": "~4.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
