--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
     "@types/luxon": "^3.3.2",
+    "chart.js": "^4.4.4",
     "feather-icons": "^4.29.1",
     "flatpickr": "^4.6.13",
     "html2canvas": "^1.4.1",
@@ -27,6 +28,7 @@
     "luxon": "^3.4.3",
     "ng-circle-progress": "^1.7.1",
     "ng-multiselect-dropdown": "^0.3.8",
+    "ngx-gauge": "^6.0.0",
     "ngx-material-timepicker": "^13.1.1",
     "number-to-words": "^1.2.4",
     "pdfmake": "^0.2.10",
